Switch png to gif onclick ! 9gag like !

--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -54,9 +54,9 @@
 				<div class="large-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/value.png" alt="Animation valeur" class="medium-gif">
+							<img src="assets/img/value.png" alt="Animation valeur" class="medium-gif png-anim" data-gif='/assets/img/gif/value-medium.gif'>
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/value.png" alt="Animation valeur">
+							<img src="assets/img/value.png" class='png-anim' alt="Animation valeur" data-gif='/assets/img/gif/value-small.gif'>
 						{#{% else %}
 							<div class="video-head"></div>
 							<video src="assets/video/valeur-IE.mp4" autoplay loop></video>#}
@@ -86,9 +86,9 @@
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
 					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/risk.png" alt="Animation risque" class="medium-gif">
+							<img src="assets/img/risk.png" class='png-anim' alt="Animation risque" class="medium-gif png-anim"  data-gif='/assets/img/gif/risk-medium.gif'>
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/risk.png" alt="">
+							<img src="assets/img/risk.png" class='png-anim' alt="Animation risque"  data-gif='/assets/img/gif/risk-small.gif'>
 						{#{% else %}
 							<video src="assets/video/risk-IE.mp4" autoplay loop></video>#}
 						{% endif %}
@@ -116,9 +116,9 @@
 				<div class="large-6 medium-6 columns anim-item">
 					{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/amelio.png" alt="Animation amélioration continue" class="medium-gif">
+							<img src="assets/img/amelio.png" alt="Animation amélioration continue" class="medium-gif png-anim" data-gif='/assets/img/gif/amelio-medium.gif'>
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/amelio.png" alt="">
+							<img src="assets/img/amelio.png" class='png-anim' alt="Animation amelioration continue" data-gif='/assets/img/gif/amelio-small.gif'>
 						{#{% else %}
 							<video src="assets/video/amelio-IE.mp4" autoplay loop></video>#}
 						{% endif %}
@@ -152,9 +152,9 @@
 				<div class="large-6 large-pull-6 medium-7  columns anim-item">
 				{% if ress.isMobile ==  true %}
 						{% if ress.isTablet == true %}
-							<img src="assets/img/extia.png" alt="Animation Extia" class="medium-gif">
+							<img src="assets/img/extia.png" alt="Animation Extia" class="medium-gif png-anim" data-gif='/assets/img/gif/extia-medium.gif'>
 						{% elseif ress.isMobile == true %}
-							<img src="assets/img/extia.png" alt="">
+							<img src="assets/img/extia.png" alt="Animation Extia" class='png-anim' data-gif='/assets/img/gif/extia-small.gif'>
 						{#{% else %}
 							<video src="assets/video/extia-IE.mp4" autoplay loop></video>#}
 						{% endif %}
