--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -123,7 +123,7 @@
 					</div>
 			</div>
 		</footer>
-  		{#{% include "scripts-debug.html.twig" %}#}
-  		<script src="/assets/js/scripts.min.js"></script>
+  		{% include "scripts-debug.html.twig" %}
+  		<!--<script src="/assets/js/scripts.min.js"></script>-->
 	</body>
 </html>
