Added all logo for footer

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -71,7 +71,7 @@
 						--><a class="mail-contact" href="mailto:contact@kilix.fr">Email</a>
 					</div>
 				</nav>
-				<div class="back-to-top show-for-medium-up">
+				<div class="back-to-top show-for-large-up">
 					<i class="icon-arrow-up"></i>
 				</div>
 			</div>
@@ -89,14 +89,14 @@
 			</div>#}
 			<div class="copyright row">
 					<div class="medium-4 columns references-footer">
-						<div class="reference"><img src="/assets/img/ref-orange-white.png" alt="Logo Orange"></div><!--
+						<div class="reference"><img src="/assets/img/ref-orange.png" alt="Logo Orange"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-ftv-white.png" alt="Logo France Televisions"></div><!--
-			  			--><div class="reference"><img src="/assets/img/ref-aegis-white.png" alt="Logo Aegis Media"></div><!--
+			  			--><div class="reference"><img src="/assets/img/ref-aegis.png" alt="Logo Aegis Media"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-publicis-white.png" alt="Logo Publicis Groupe"></div><!--
-			  			--><div class="reference"><img src="/assets/img/ref-generali-white.png" alt="Logo Generali Group"></div><!--
-			  			--><div class="reference tf1"><img src="/assets/img/ref-tf1-white.png" alt="Logo TF1"></div><!--
-			  			--><div class="reference"><img src="/assets/img/ref-lagardere-white.png" alt="Logo lagardère"></div><!--
-			  			--><div class="reference clear-fix"><img src="/assets/img/ref-sfr-white.png" alt="Logo SFR"></div>
+			  			--><div class="reference"><img src="/assets/img/ref-generali.png" alt="Logo Generali Group"></div><!--
+			  			--><div class="reference tf1"><img src="/assets/img/ref-tf1.png" alt="Logo TF1"></div><!--
+			  			--><div class="reference"><img src="/assets/img/ref-lagardere.png" alt="Logo lagardère"></div><!--
+			  			--><div class="reference clear-fix"><img src="/assets/img/ref-sfr.png" alt="Logo SFR"></div>
 					</div>
 					<div class="medium-3 columns">
 						<strong>Kilix by Extia</strong> <br>
