--- a/web/assets/scss/components/footer.scss
+++ b/web/assets/scss/components/footer.scss
@@ -63,12 +63,18 @@ footer{
 		z-index:2;
 		padding:2rem 0;
 
+		.columns{
+			display: inline-block!important;
+			float: none!important;
+			vertical-align: middle!important;
+		}
+
 		@media #{$medium-up} {
 			padding:5rem 0;
 		}
 		.references-footer{
 			@media #{$large-up} {
-				padding-right: 3rem;
+				padding-right: 6rem;
 			}
 			// @media #{$small-only} {
 			// 	background: #fff;
@@ -137,8 +143,6 @@ footer{
 		position: relative;
 		z-index: 3;
 		text-align: center;
-		padding-top: 1.5rem;
-		padding-bottom: 1.5rem;
 		color: #8b8b8b;
 		font-weight: 400;
 		line-height: 22px;
