--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -23,7 +23,7 @@
 				</div>
 				<article class="medium-8 columns intro-content">
 					<h2>L’agence digitale Agile by EXTIA</h2>
-					<p>Kilix combine la maîtrise des technologies Web les plus récentes, qu’elle associe à l’expertise d’Extia en matière de conseil. Guidée par la philosophie agile, notre équipe vous accompagne sur l’ensemble de votre projet, du conseil au développement et au Webdesign. Site Web, plateforme de commerce en ligne, intranet ou application mobile, Kilix saura répondre à tous vos besoins… avec Agilité !</p>
+					<p>Kilix combine la maîtrise des technologies Web les plus récentes, qu’elle associe à l’expertise d’Extia en matière de conseil. Guidée par la philosophie agile, notre équipe vous accompagne sur l’ensemble de votre projet, du conseil au développement en passant par le Webdesign. Site Web, plateforme de commerce en ligne, intranet ou application mobile, Kilix saura répondre à tous vos besoins… avec Agilité !</p>
 				</article>
 			</div>
 		</section>
@@ -46,9 +46,9 @@
 					<h3>Optimiser la création de valeur</h3>
 					<p>Nous pilotons avec vous votre projet de A à Z en fonction de la valeur qu’il apportera à vos utilisateurs. Vous possédez rapidement un produit qui répond à vos besoins et ceux de votre cible.</p>
 					{% if browser.browser == "IE" %}
-						<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="buttonIE valeurIE enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+						<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="buttonIE valeurIE enabled" title="Gestion par la valeur"><span data-hover="En savoir plus">En savoir plus</span></a>
 					{% else %}
-						<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+						<a data-pos="3" data-scroll="0" data-page-title="Agilite" href="/agilite" class="button enabled" title="Gestion par la valeur"><span data-hover="En savoir plus">En savoir plus</span></a>
 					{% endif %}
 				</div>
 				<div class="large-6 medium-7 columns anim-item">
@@ -78,9 +78,9 @@
 					<h3>Anticiper pour prévenir les risques</h3>
 					<p>Avec votre collaboration, nous menons dès le début du projet une analyse des risques afin de limiter les retours de vos utilisateurs et ainsi maximiser sa réussite.</p>
 					{% if browser.browser == "IE" %}
-						<a data-pos="3" data-scroll="1" data-page-title="Agilite" href="/agilite" class="buttonIE risquesIE enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+						<a data-pos="3" data-scroll="1" data-page-title="Agilite" href="/agilite" class="buttonIE risquesIE enabled" title="Gestion par les risques"><span data-hover="En savoir plus">En savoir plus</span></a>
 					{% else %}
-						<a data-pos="3" data-scroll="1" data-page-title="Agilite" href="/agilite" class="button enabled"><span data-hover="En savoir plus">En savoir plus</span></a>
+						<a data-pos="3" data-scroll="1" data-page-title="Agilite" href="/agilite" class="button enabled" title="Gestion par les risques"><span data-hover="En savoir plus">En savoir plus</span></a>
 					{% endif %}
 				</div>
 				<div class="large-6 large-pull-6 medium-7 columns anim-item">
@@ -144,9 +144,9 @@
 					<h3>Boostez vos projets grâce à l'énergie d’Extia</h3>
 					<p>Nous nous appuyons sur l'expertise d’Extia, acteur reconnu du conseil depuis 7 ans, qui met à votre disposition ses meilleurs consultants et vous garantit l'atteinte de vos objectifs dans les délais impartis.</p>
 					{% if browser.browser == "IE" %}
-						<a href="http://www.extia.fr" target=_blank class="buttonIE extiaIE"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
+						<a href="http://www.extia.fr" target=_blank class="buttonIE extiaIE" title="EXTIA - Incubateur de talents"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 					{% else %}
-							<a href="http://www.extia.fr" target=_blank class="button"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
+							<a href="http://www.extia.fr" target=_blank class="button" title="EXTIA - Incubateur de talents"><span data-hover="Accéder à Extia.fr">Accéder à Extia.fr</span></a>
 					{% endif %}
 				</article>
 				<div class="large-6 large-pull-6 medium-7  columns anim-item">
