--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{{title}}</title>
 		<link rel="shortcut icon" href="favicon.ico">
-		<meta property="og:image" content="/assets/img/logo_x.png" />
+		<meta property="og:image" content="http://kilix.fr/assets/img/logo_x.png" />
 		<meta name="description" content="Kilix est une agence digitale fondée sur l'Agilité. Elle réalise des projets au forfait, du site vitrine à l'ERP sur mesure en passant par les middlewares." />
   		<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
   		<script src="assets/js/vendor/modernizr.min.js"></script>
