--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -138,6 +138,6 @@
 			</div>
 		</footer>
   		{# {% include "scripts-debug.html.twig" %} #}
-  		<script src="/assets/js/scripts.min.js"></script>
+		<!----> <script src="/assets/js/scripts.min.js"></script> 
 	</body>
 </html>
