--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -106,7 +106,7 @@
 			  			--><div class="reference"><img src="/assets/img/M6-tv-logo.png" alt="Logo France Televisions"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-aegis.png" alt="Logo Aegis Media"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-publicis-white.png" alt="Logo Publicis Groupe"></div><!--
-			  			--><div class="reference"><img src="/assets/img/ref-generali.png" alt="Logo Generali Group"></div><!--
+			  			--><div class="reference"><img src="/assets/img/ref-decapost.png" alt="Logo Decapost Group"></div><!--
 			  			--><div class="reference tf1"><img src="/assets/img/ref-tf1.png" alt="Logo TF1"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-orange.png" alt="Logo Orange"></div><!--
 			  			--><div class="reference clear-fix"><img src="/assets/img/ref-sfr.png" alt="Logo SFR"></div>
