--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -59,7 +59,7 @@
 		        <img src="assets/img/svg/close_career_widget.svg" alt="Logo extia" class="svg close-career-widget">
 		    </div>
 		  	<img src="assets/img/svg/widget_career_content.svg" alt="Logo extia" class="svg widget-career-content">
-		  	<a href="mailto:contact@kilix.fr" class="button mailto">contact@extia.com</a>
+		  	<a href="mailto:contact@kilix.fr" class="button mailto">contact@kilix.fr</a>
 		</div>
 
 		<header class="navbar navbar-top">
