add link to kilix blog

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -81,6 +81,7 @@
 
 
 					<a class="nav-link-contact hide-for-small-only" id='link-contact' title="Contactez Kilix">Contact</a>
+					<a class='nav-link blog' href="http://blog.kilix.fr" id='link-blog' title="Kilix - Blog">Blog</a>
 					<a class='nav-link extia' href="http://extia.fr" target="_blank" title="EXTIA - Incubateur de talents">
 						{% if ress.isMobile ==  true %}
 							<img src="assets/img/logo_extia.png" alt="Logo extia"></a>
