--- a/web/assets/scss/components/menu.scss
+++ b/web/assets/scss/components/menu.scss
@@ -28,19 +28,19 @@ $mobile-contact-height: 40;
 	width: 100%;
 	z-index: 10;
 	box-shadow: rgba(0, 0, 0, 0.05) 0px 8px 0px;
-	transition:height .3s cubic-bezier(0.165,0.840,0.440,1.000),top .3s cubic-bezier(0.165,0.840,0.440,1.000),transform .6s cubic-bezier(0.165,0.840,0.440,1.000), background .6s cubic-bezier(0.165,0.840,0.440,1.000);	
+	transition:height .3s cubic-bezier(0.165,0.840,0.440,1.000),top .3s cubic-bezier(0.165,0.840,0.440,1.000),transform .6s cubic-bezier(0.165,0.840,0.440,1.000), background .6s cubic-bezier(0.165,0.840,0.440,1.000);
 
-	
+
 	@media #{$medium-up} {
 		height: rem-calc(100);
 		.row{
-				height: rem-calc(100);
-				line-height: rem-calc(100);
-				padding:0 1rem;
-				transition: line-height 0.6s;
-				position: relative;
+			height: rem-calc(100);
+			line-height: rem-calc(100);
+			padding:0 1rem;
+			transition: line-height 0.6s;
+			position: relative;
 
-			}
+		}
 		$height-navbar-top : 70px;
 		&.navbar-top {
 			background: rgba(0,0,0,0.4);
@@ -48,8 +48,12 @@ $mobile-contact-height: 40;
 
 			height:rem-calc($height-navbar-top);
 
-			.nav-links-wrapper  .nav-link{
+			.nav-links-wrapper  .nav-link,
+			.nav-links-wrapper .blog{
 				color:white;
+			}
+			.nav-links-wrapper .blog{
+				opacity: 1;
 			}
 
 			.back-to-top{opacity:0!important; pointer-events:none;}
@@ -57,7 +61,7 @@ $mobile-contact-height: 40;
 			.row{
 				height: rem-calc($height-navbar-top);
 				line-height: rem-calc($height-navbar-top);
-				
+
 			}
 
 			.logo{opacity:0;}
@@ -66,7 +70,7 @@ $mobile-contact-height: 40;
 
 				g, #goutte1, #goutte2{
 					fill:white;
-				}	
+				}
 			}
 		}
 	}
@@ -80,7 +84,7 @@ $mobile-contact-height: 40;
 		display: block;
 		float: left;
 		font-size: rem-calc(45);
-		color: #000; 
+		color: #000;
 		border: 1px solid rgba(255, 255, 255, 0.1);
 		border-width: 0 1px;
 		box-sizing:border-box;
@@ -105,12 +109,12 @@ $mobile-contact-height: 40;
 		.ham-folded {
 			display: block;
 			transform:translateY(rem-calc(0));
-			transition:transform .5s ease;	
-			color:white;	
+			transition:transform .5s ease;
+			color:white;
 		}
 	}
 
-	
+
 	.nav-links-wrapper {
 		backface-visibility:hidden;
 		transition:all .6s cubic-bezier(0.165,0.840,0.440,1.000);
@@ -186,7 +190,7 @@ $mobile-contact-height: 40;
 		.nav-link-contact{
 			@include linkedIn;
 			font-family: Ubuntu;
-			
+
 			color: white;
 			text-transform:uppercase;
 			position: relative;
@@ -195,30 +199,31 @@ $mobile-contact-height: 40;
 
 			border-bottom: none;
 
-					&:after{
-					position: absolute;
-					width: 100%;
-					height: 2px;
-					bottom: 10px;
-					left: 0;
-					background: $second-color;
-					content: " ";
-					transition: 0.3s ease-out;
-					transform: translateY(0.3rem);
-					opacity:0;
-				}
+			&:after{
+				position: absolute;
+				width: 100%;
+				height: 2px;
+				bottom: 10px;
+				left: 0;
+				background: $second-color;
+				content: " ";
+				transition: 0.3s ease-out;
+				transform: translateY(0.3rem);
+				opacity:0;
+			}
 
-				&.current, &:hover{
-					&:after{
-						transform: translateY(0);
-						opacity:1;
-					}
+			&.current, &:hover{
+				&:after{
+					transform: translateY(0);
+					opacity:1;
 				}
+			}
 
 		}
 
 
-		.nav-link {
+		.nav-link,
+		.blog {
 			opacity: .2;
 			font-family: Ubuntu;
 			font-size: rem-calc(16);
@@ -244,7 +249,7 @@ $mobile-contact-height: 40;
 					line-height: rem-calc($mobile-link-height-landscape) !important;
 				}
 			}
-			
+
 
 
 			@media #{$medium-up} {
@@ -327,15 +332,15 @@ $mobile-contact-height: 40;
 		svg {
 			width: 100%;
 			height: 63px;
-			transition: height 0.8s;	
+			transition: height 0.8s;
 			@media #{$medium-up} {
 				height: 100px;
-			}	
+			}
 
 			//Test couleur
 			g, #goutte1, #goutte2{
-					fill:white;
-				}	
+				fill:white;
+			}
 		}
 		box-sizing: content-box;
 		@media #{$medium-up} {
@@ -346,26 +351,26 @@ $mobile-contact-height: 40;
 
 
 		svg polygon, #goutte1, #goutte2 {
-		  transition: all 0.5s;
+			transition: all 0.5s;
 		}
 
 		#goutte2{
-		    animation-delay: 200ms;
+			animation-delay: 200ms;
 		}
 
 		&.animated{
-		    #goutte1, #goutte2{
-		       animation-name: bounce;
-		       animation-duration: 0.7s;
-		       animation-timing-function: ease;
-		       animation-iteration-count: infinite
-		    }
+			#goutte1, #goutte2{
+				animation-name: bounce;
+				animation-duration: 0.7s;
+				animation-timing-function: ease;
+				animation-iteration-count: infinite
+			}
 		}
 
 		&:hover{
-			 #goutte1, #goutte2 {
+			#goutte1, #goutte2 {
 				transform: translateY(-40px);
-			 }
+			}
 		}
 
 
@@ -380,7 +385,7 @@ body.unfolded {
 		.site-wrapper {
 			transform: translateY(rem-calc($mobile-link-height*4 + $mobile-contact-height));
 
-			
+
 			@media #{$medium-up} {
 				transform: translateY(0);
 			}
@@ -397,7 +402,7 @@ body.unfolded {
 				transform:translateY(rem-calc($mobile-link-height-landscape*4 + $mobile-contact-height));
 
 			}
-			transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);			
+			transition:transform .6s cubic-bezier(0.165,0.840,0.440,1.000);
 			@media #{$medium-up} {
 				transform:translateY(rem-calc(0));
 			}
@@ -412,7 +417,7 @@ body.unfolded {
 					z-index:1;
 				}
 
-				
+
 			}
 		}
 
