--- a/views/404.html.twig
+++ b/views/404.html.twig
@@ -1,47 +1,47 @@
 
 <!doctype html>
 <html class="no-js " lang="en" style="height:100%">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Kilix - L'Usine digitale</title>
-		<link rel="shortcut icon" href="favicon.ico">
-		<meta name="description" content="Kilix est une agence digitale fondée sur l'Agilité. Elle réalise des projets au forfait, du site vitrine à l'ERP sur mesure en passant par les middlewares." />
-  		<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
-  		<script src="assets/js/vendor/modernizr.min.js"></script>
-		
-		<style>
-			a {
-				color:#008bc2;
-			}
-			a:hover {
-				color:#9cbee0;
-			}
-			
-		</style>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Kilix - L'Usine digitale</title>
+	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="description" content="Kilix est une agence digitale fondée sur l'Agilité. Elle réalise des projets au forfait, du site vitrine à l'ERP sur mesure en passant par les middlewares." />
+	<link href="/assets/css/app.min.css" rel="stylesheet" type="text/css" media="all"/>
+	<script src="assets/js/vendor/modernizr.min.js"></script>
 
-  	</head>
-	<body style="height:100%">
-		<div role="main" class='site-wrapper clearfix' style="height:100%">
-			<div class="main-wrapper" style="height:100%">
-				<div class="wrapper" style="height:100%">
-					<div class="container home" data-page="home" style="height:100%">
-						<section class="svg-anim ❤ svg-valeur" style="height:100%">
-							<div class="row"  style="height:100%;text-align:center;font-size:75px;line-height:75px;">
-								<img src="/assets/img/logo_small.svg" alt="Logo Kilix"><br>
-								Page non trouvée <br>
+	<style>
+		a {
+			color:#008bc2;
+		}
+		a:hover {
+			color:#9cbee0;
+		}
 
-								<a href="/">Retour à la page d'accueil</a>
+	</style>
 
-							</div>
-						</section>
-					</div>
+</head>
+<body style="height:100%">
+	<div role="main" class='site-wrapper clearfix' style="height:100%">
+		<div class="main-wrapper" style="height:100%">
+			<div class="wrapper" style="height:100%">
+				<div class="container home" data-page="home" style="height:100%">
+					<section class="svg-anim ❤ svg-valeur" style="height:100%">
+						<div class="row"  style="height:100%;text-align:center;font-size:75px;line-height:75px;">
+							<img src="/assets/img/logo_small.svg" alt="Logo Kilix"><br>
+							Page non trouvée <br>
+
+							<a href="/">Retour à la page d'accueil</a>
+
+						</div>
+					</section>
 				</div>
-		  	</div>
+			</div>
 		</div>
-		<footer>
-						<div class="copyright row">
-					<div class="medium-2 columns">
+	</div>
+	<footer>
+		<div class="copyright row">
+			<div class="medium-2 columns">
 						<div class="reference"><img src="/assets/img/ref-orange-white.png" alt="Logo Orange"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-ftv-white.png" alt="Logo France Televisions"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-aegis-white.png" alt="Logo Aegis Media"></div><!--
@@ -49,24 +49,29 @@
 			  			--><div class="reference"><img src="/assets/img/ref-generali-white.png" alt="Logo Generali Group"></div><!--
 			  			--><div class="reference tf1"><img src="/assets/img/ref-tf1-white.png" alt="Logo TF1"></div><!--
 			  			--><div class="reference"><img src="/assets/img/ref-lagardere-white.png" alt="Logo lagardère"></div><!--
-			  			--><div class="reference clear-fix"><img src="/assets/img/ref-sfr-white.png" alt="Logo SFR"></div>
-					</div>
-					<div class="medium-4 columns">
-						<strong>Kilix by Extia</strong> <br>
-						<a target="_blank" href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&amp;ie=UTF-8&amp;hq=&amp;hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&amp;gl=fr&amp;ei=S0DYUqWaOKO90QX4roHIDw&amp;ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
-						 <br>Entrée A – 6ème étage <br>92310 SÈVRES
-					</div>
-					<div class="medium-2 columns">
-						<strong>Contactez-nous</strong> <br>
-						Tél : 01 46 99 91 91 <br>
-						Fax : 01 46 99 91 90 <br>
-						<a href="mailto:contact@kilix.fr">contact@kilix.fr</a>
-					</div>
-					<div class="copyright2 medium-4 columns">
-						©2014 Kilix <i class="icon-heart" data-text="est une marque déposée d'"></i> Extia
-					</div>
-			</div>
-		</footer>
-  		
-	</body>
-</html>
+			  		--><div class="reference clear-fix"><img src="/assets/img/ref-sfr-white.png" alt="Logo SFR"></div>
+			  	</div>
+			  	<div class="medium-4 columns">
+			  		<strong>Kilix by Extia</strong> <br>
+			  		<a target="_blank" href="https://maps.google.fr/maps?q=google+maps+1+avenue+de+la+cristallerie&amp;ie=UTF-8&amp;hq=&amp;hnear=0x47e67b0491111b29:0x1e40b81275175848,1+Avenue+de+la+Cristallerie,+92310+S%C3%A8vres&amp;gl=fr&amp;ei=S0DYUqWaOKO90QX4roHIDw&amp;ved=0CDIQ8gEwAA">1, avenue de la Cristallerie</a>
+			  		<br>Entrée A – 6ème étage <br>92310 SÈVRES
+			  	</div>
+			  	<div class="medium-2 columns">
+			  		<strong>Contactez-nous</strong> <br>
+			  		Tél : 01 46 99 91 91 <br>
+			  		Fax : 01 46 99 91 90 <br>
+			  		<a id="link_contact" href=""></a>
+			  	</div>
+			  	<div class="copyright2 medium-4 columns">
+			  		©2014 Kilix <i class="icon-heart" data-text="est une marque déposée d'"></i> Extia
+			  	</div>
+			  </div>
+			</footer>
+			<script type="text/javascript">
+				var email = "contact" + '@' + "kilix.fr";
+				$('#contact_link')
+				.attr('href', 'mailto:' + email)
+				.html(email);
+			</script>
+		</body>
+		</html>
