--- a/views/team.html.twig
+++ b/views/team.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout.html.twig" %}
 
-{% block content %} 
+{% block content %}
 	<div class="container team" data-page="team">
 		<header class="landing landing-team {% if ress.isMobile ==  false %}desktop{% endif %}">
 			<div class="row">
@@ -20,10 +20,10 @@
 						<p>Le client est la pierre angulaire de l’équipe. Vous bénéficiez d’une visibilité totale sur votre projet à tout moment. Contrairement aux modes de gestion de projet classiques, vous accompagnez le développement de votre produit et pouvez affiner votre vision à tout moment. </p>
 						<h2>...Et nous</h2>
 						<p>
-							L’équipe de Kilix se compose d’experts reconnus qui interviennent sur tous les métiers : 
-								UX et UI Design, 
-								référencement, 
-								technologies front-end et back-end avant-gardistes, 
+							L’équipe de Kilix se compose d’experts reconnus qui interviennent sur tous les métiers :
+								UX et UI Design,
+								référencement,
+								technologies front-end et back-end avant-gardistes,
 								analyse approfondie des tendances à venir…
 
 							La synergie ainsi créée favorise la réussite de notre aventure.
@@ -40,7 +40,7 @@
 			</div>
 		</section>
 		#}
-		<section class="svg-anim" data-color="col1">
+		<section class="svg-anim ❤ svg-team" data-color="col1">
 			<div class="row">
 				<div class="large-8 medium-7 columns">
 					{% if ress.isMobile ==  true or (browser.browser == "IE" and browser.majorver < 10) %}
@@ -55,7 +55,7 @@
 						<svg id="TEAM-f1" x="0px" y="0px" viewBox="0 0 1500 900"></svg>
 					{% endif %}
 				</div>
-				<article class="large-4 medium-5 columns ">
+				<article class="large-4 medium-5 columns">
 					<h3 class='hide-for-medium-down show-for-medium-large-up'>Soyons Agile</h3>
 					<h3 class='raptor hide-for-large-up'>Soyons Agile</h3>
 					<p>
@@ -68,7 +68,7 @@
 						Il nous paraît évident que l’équipe idéale vous intègre au même titre que nos développeurs.
 						Vous devenez ainsi l’acteur principal de votre projet !
 					</p>
-					
+
 				</article>
 			</div>
 		</section>
