--- a/views/contact-footer.html.twig
+++ b/views/contact-footer.html.twig
@@ -1,7 +1,7 @@
 <div class="footer-contact">
 	<div class="row">
 		<q>Let's start a new project together!</q>
-		<a id="link_contact" href="" class="button button-white">Contactez-nous</a>
+		<a id="link_contact" target="_blank" href="" class="button button-white">Contactez-nous</a>
 	</div>
 </div>
 <script type="text/javascript">
