debut developpement de la page référencement

--- a/views/layout.html.twig
+++ b/views/layout.html.twig
@@ -70,9 +70,10 @@
               <a class='nav-link enabled {% if page == 'home' %}current{% endif %}' id='link-home' href="/" data-pos="1" title="{{titles.home}}">Home</a>
               <a class='nav-link enabled {% if page == 'team' %}current{% endif %}' id='link-team' href="/team" data-pos="2" title="{{titles.team}}">Team</a>
               <a class='nav-link enabled {% if page == 'agilite' %}current{% endif %}' id='link-agilite' href="/agilite" data-pos="3" title="{{titles.agilite}}">Agilite</a>
+              <a class='nav-link enabled {% if page == 'references' %}current{% endif %}' id='link-references' href="/references" data-pos="4" title="{{titles.references}}">References</a>
 
 
-              <a class="nav-link-contact hide-for-small-only" id='link-contact' title="Contactez Kilix">Contact</a>
+              <a class="nav-link-contact hide-for-small-only" id='link-contact' data-pos="5" title="Contactez Kilix">Contact</a>
               <a class='nav-link blog' href="http://blog.kilix.fr" target="_blank" id='link-blog' title="Kilix - Blog">Blog</a>
               <a class='nav-link extia' href="http://extia.fr" target="_blank" title="EXTIA - Incubateur de talents">
                {% if ress.isMobile ==  true %}
